--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,113 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    repositories {
-        jcenter()
+plugins {
+    id 'com.android.application'
+    id ('idea')
+}
+idea {
+    module {
+        downloadJavadoc = true
     }
-    dependencies {
-//        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.android.tools.build:gradle:2.3.3'
+}
+android {
+    compileSdk 34
+    defaultConfig {
+        applicationId "docx4j.org.docx4j4android4"
+        minSdk 29
+        targetSdk 34
+        versionCode 18
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndkVersion '25.2.9515693'
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
+        sourceSets {
+            main {
+                resources.includes = [ 'src/main/assets/docx4j.properties' ]
+            }
+        }
+        buildscript {
+            repositories {
+                maven { url 'https://jitpack.io' }
+                google()
+                mavenCentral()
+            }
+    }
+    buildscript {
+        repositories {
+            maven { url "https://plugins.gradle.org/m2/" }
+            maven { url 'https://jitpack.io' }
+            mavenCentral()
+        }
+    }
+ 
+        packagingOptions{
+            exclude 'META-INF/LGPL2.1'
+            exclude 'META-INF/substrate/config/resourcebundles'
+            exclude'META-INF/LICENSE.md'
+            exclude 'META-INF/NOTICE.md'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        }
+    buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true
+            ndk {
+                debugSymbolLevel 'FULL'
+            }
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
+  
+
+dependencies {
+
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    
+    implementation 'com.opencsv:opencsv:5.8'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'androidx.browser:browser:1.6.0'
+    implementation 'com.google.android.play:integrity:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.ar:core:1.40.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+//noinspection GradleDependency
+    implementation 'com.google.android.material:material:1.9.0'
+}
+    buildFeatures {
+        viewBinding true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+dependencies {
+
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    implementation 'javax.xml.stream:stax-api:1.0-2'
+    implementation 'com.fasterxml:aalto-xml:1.3.1'
+    
+    implementation files('libs/awt-bastardised-17v8.jar')
+    implementation files('libs/slf4j-android-1.6.1-RC1.jar')
+    implementation files('libs/additionnal.jar')
+    implementation files('libs/jaxb-core-2.3.0-SNAPSHOT-ANDROID.jar')
+    implementation files('libs/jaxb-runtime-2.3.0-SNAPSHOT-ANDROID.jar')
+    implementation files('libs/istack-commons-runtime-3.0.4-SNAPSHOT.jar')
+    
+  //sourcedir+ =location of jar files
+    implementation files(sourcedir+'/javafx-sdk-17.0.8/lib/javafx.graphics.jar')
+    implementation files(sourcedir+'/doc4j/docx4j-core-11.4.9.jar')
+    implementation fileTree(sourcedir+ '/doc4j/docx4j-openxml-objects-11.4.9.jar', include: ['*.aar', '*.jar'], exclude: [])
+
 }
+
